# PyTorch-SRGAN-SISR-DF2K_OST

./: README.md  config.py  data_processing.py  inference.py  models.py  plots.py  pyproject.toml  test.py  train.py  utils.py
checkpoints/srgan_best/: discriminator.safetensors  discriminator_optimizer.safetensors  generator_optimizer.safetensors  training_state.json
checkpoints/srgan_checkpoint/: discriminator.safetensors  discriminator_optimizer.safetensors  generator.safetensors  generator_optimizer.safetensors  training_state.json
checkpoints/srgan_latest/: discriminator.safetensors  discriminator_optimizer.safetensors  generator.safetensors  generator_optimizer.safetensors  training_state.json
