[project]
name = "pytorch-srgan-sisr-df2k-ost"
version = "0.1.0"
description = "PyTorch Super Resolution Generative Adversarial Network trained on the DF2K_OST dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
