[project]
name = "pytorch-srgan-sisr-df2k-ost"
version = "0.1.0"
description = "PyTorch Super Resolution Generative Adversarial Network trained on the DF2K_OST dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "safetensors>=0.6.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.0",
]
